Java documentation, Windowsinstall, and Ubuntu install / Operations updated.